--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -2,6 +2,7 @@
 pid_file_dir    = /home/gia/tmp/
 ost_reg_ex      = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex       = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
+controller_timeout_sec = 7200
 
 [comm]
 target          = *
