--- a/example_conf/controller.conf
+++ b/example_conf/controller.conf
@@ -4,6 +4,7 @@ pid_file_dir    = /home/gia/tmp/
 [comm]
 port            = 5678
 target          = 127.0.0.1
+poll_timeout    = 1000
 
 [logging]
 filename        =
