--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -4,6 +4,7 @@ ost_reg_ex      = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex       = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 #controller_timeout = 7200
 controller_timeout = 20
+measure_interval = 60
 
 [comm]
 target          = *
