Added lock_queue_timeout to master.conf

--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -5,6 +5,7 @@ ip_reg_ex       = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 #controller_timeout = 7200
 controller_timeout = 20
 measure_interval = 10
+lock_ost_queue_timeout = 10
 
 [comm]
 target          = *
