--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -6,6 +6,7 @@ ip_reg_ex       = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 controller_timeout = 20
 measure_interval = 10
 lock_ost_queue_timeout = 10
+controller_wait_duration = 10
 
 [comm]
 target          = *
