--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -7,6 +7,7 @@ controller_timeout = 20
 measure_interval = 10
 lock_ost_queue_timeout = 10
 controller_wait_duration = 10
+task_resend_timeout = 30
 
 [comm]
 target          = *
