--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -2,9 +2,8 @@
 pid_file_dir             = /home/gia/tmp/
 ost_reg_ex               = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex                = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
-#controller_timeout      = 7200
 controller_timeout       = 20
-measure_interval         = 10
+measure_interval         = 30
 lock_ost_queue_timeout   = 10
 controller_wait_duration = 10
 task_resend_timeout      = 30
@@ -12,7 +11,7 @@ task_resend_timeout      = 30
 [comm]
 target          = *
 port            = 5678
-poll_timeout    = 2
+poll_timeout    = 10
 
 [logging]
 filename        =
@@ -21,3 +20,8 @@ filename        =
 lctl_bin        = /usr/sbin/lctl
 lfs_bin         = /usr/bin/lfs
 lfs_path        = /lustre/nyx
+
+[testing]
+mode             = 1
+capture_interval = 1
+task_count       = 10000
