Added testing output to controller

--- a/example_conf/controller.conf
+++ b/example_conf/controller.conf
@@ -4,7 +4,11 @@ pid_file_dir    = /home/gia/tmp/
 [comm]
 target          = 127.0.0.1
 port            = 5678
-poll_timeout    = 5
+poll_timeout    = 10
 
 [logging]
 filename        =
+
+[testing]
+mode             = 1
+capture_interval = 1
