Added reset of retry count in controller

--- a/example_conf/controller.conf
+++ b/example_conf/controller.conf
@@ -1,10 +1,11 @@
 [control]
-pid_file_dir    = /home/gia/tmp/
+pid_file_dir                = /home/gia/tmp/
 
 [comm]
-target          = 127.0.0.1
-port            = 5678
-poll_timeout    = 1
+target                      = 127.0.0.1
+port                        = 5678
+poll_timeout                = 1
+request_retry_wait_duration = 10
 
 [logging]
-filename        =
+filename                    =
