--- a/example_conf/controller.conf
+++ b/example_conf/controller.conf
@@ -12,3 +12,10 @@ filename                    =
 
 [processing]
 worker_count                = 4
+
+[db]
+host =
+user =
+passwd =
+database =
+table = OST_PERF_HISTORY
