--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -20,3 +20,10 @@ filename        =
 lctl_bin        = /usr/sbin/lctl
 lfs_bin         = /usr/bin/lfs
 lfs_path        = /lustre/nyx
+
+[db]
+host =
+user =
+passwd =
+database =
+table = OST_PERF_HISTORY
