Added retrieving of OST state lists.

--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -20,10 +20,11 @@ filename        =
 lctl_bin        = /usr/sbin/lctl
 lfs_bin         = /usr/bin/lfs
 lfs_path        = /lustre/nyx
+fs_target       = nyx
 
 [db]
 host =
 user =
 passwd =
 database =
-table = OST_PERF_HISTORY
+table = OST_PERF_HISTORY_NYX
