--- a/example_conf/controller.conf
+++ b/example_conf/controller.conf
@@ -7,7 +7,7 @@ port                        = 5678
 poll_timeout                = 1
 request_retry_wait_duration = 10
 
-[logging]
+[log]
 filename                    =
 
 [processing]
@@ -18,4 +18,7 @@ host =
 user =
 passwd =
 database =
-table = OST_PERF_HISTORY
+table = OST_PERF_HISTORY_NYX
+
+[test]
+total_bytes                 = 32000000
