--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -3,7 +3,6 @@ pid_file_dir              = /home/gia/tmp/
 ost_reg_ex                = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex                 = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 controller_timeout        = 20
-measure_interval          = 30
 lock_shared_queue_timeout = 10
 controller_wait_duration  = 1
 task_resend_timeout       = 30
@@ -13,7 +12,7 @@ target          = *
 port            = 5678
 poll_timeout    = 1
 
-[logging]
+[log]
 filename        =
 
 [lustre]
@@ -28,3 +27,7 @@ user =
 passwd =
 database =
 table = OST_PERF_HISTORY_NYX
+
+[test]
+measure_interval          = 30
+total_bytes               = 32000000
