Inserting OSTPerfResult items into database
* Added OSTPerfResult class
* Updated OSTPerfHistoryTableHandler to insert and save items into
database
* OSTListProcessor saves inactive OSTs into database

--- a/example_conf/controller.conf
+++ b/example_conf/controller.conf
@@ -18,7 +18,7 @@ host =
 user =
 passwd =
 database =
-table = OST_PERF_HISTORY_NYX
+table = OST_PERF_HISTORY_TESTING_NYX
 
 [test]
 total_bytes                 = 32000000
