--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -26,7 +26,7 @@ host =
 user =
 passwd =
 database =
-table = OST_PERF_HISTORY_NYX
+table = OST_PERF_HISTORY_TESTING_NYX
 
 [test]
 measure_interval          = 30
