Added block and total payload size in bytes to the OSTTask

--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -30,4 +30,5 @@ table = OST_PERF_HISTORY_TESTING_NYX
 
 [test]
 measure_interval          = 30
-total_bytes               = 32000000
+block_size_bytes          = 8000000
+total_size_bytes          = 32000000
