--- a/example_conf/controller.conf
+++ b/example_conf/controller.conf
@@ -7,6 +7,9 @@ port                        = 5678
 poll_timeout                = 1
 request_retry_wait_duration = 10
 
+[lustre]
+lfs_bin                     = /usr/bin/lfs
+
 [log]
 filename                    =
 
