--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -1,5 +1,5 @@
 [control]
-pid_file_dir              = /home/gia/tmp/
+pid_file_dir              = /home/gia/tmp
 ost_reg_ex                = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex                 = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 controller_timeout        = 20
@@ -18,8 +18,7 @@ filename        =
 [lustre]
 lctl_bin        = /usr/sbin/lctl
 lfs_bin         = /usr/bin/lfs
-lfs_path        = /lustre/nyx
-fs_target       = nyx
+lfs_target       = nyx
 
 [db]
 host =
@@ -32,3 +31,4 @@ table = OST_PERF_HISTORY_TESTING_NYX
 measure_interval          = 30
 block_size_bytes          = 8000000
 total_size_bytes          = 32000000
+target_dir                = /lustre/nyx/PATH
