Added database proxy for single ost performance testing

--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -20,15 +20,12 @@ lctl_bin        = /usr/sbin/lctl
 lfs_bin         = /usr/bin/lfs
 lfs_target       = nyx
 
-[db]
-host =
-user =
-passwd =
-database =
-table = OST_PERF_HISTORY_TESTING_NYX
-
 [test]
 measure_interval          = 900
+
+[task]
 block_size_bytes          = 8000000
 total_size_bytes          = 32000000
 target_dir                = /lustre/nyx/PATH
+db_proxy_target           = localhost
+db_proxy_port             = 5777
