Updated OSTListProcessor to send inactive OST entries to the Database Proxy

--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -1,3 +1,7 @@
+[db_proxy]
+target           = localhost
+port             = 5777
+
 [control]
 pid_file_dir              = /home/gia/tmp
 ost_reg_ex                = ^OST[0-9a-fA-F]{4}$
@@ -22,9 +26,8 @@ lfs_target       = nyx
 [test]
 measure_interval          = 900
 
+# TODO: Export task to a separate task description
 [task]
 block_size_bytes          = 8000000
 total_size_bytes          = 32000000
 target_dir                = /lustre/nyx/PATH
-db_proxy_target           = localhost
-db_proxy_port             = 5777
