Updated to PID per instance

--- a/example_conf/controller.conf
+++ b/example_conf/controller.conf
@@ -1,5 +1,5 @@
 [control]
-pid_file_dir                = /home/gia/tmp/
+pid_file                    = /home/gia/tmp/lmon_controller.pid
 
 [comm]
 target                      = 127.0.0.1
