--- a/example_conf/database_proxy.conf
+++ b/example_conf/database_proxy.conf
@@ -4,7 +4,7 @@ port            = 5777
 poll_timeout    = 10
 
 [control]
-pid_file_dir    = /home/gia/tmp
+pid_file        = /home/gia/tmp/lmon_dbproxy.pid
 
 [db]
 host =
