--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -3,7 +3,7 @@ target           = localhost
 port             = 5777
 
 [control]
-pid_file_dir              = /home/gia/tmp
+pid_file                  = /home/gia/tmp/lmon_master.pid
 ost_reg_ex                = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex                 = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 controller_timeout        = 20
