Added version number to master and controller

--- a/example_conf/controller.conf
+++ b/example_conf/controller.conf
@@ -1,5 +1,6 @@
 [control]
 pid_file                    = /home/gia/tmp/lmon_controller.pid
+version                     = 0.1.1
 
 [comm]
 target                      = 127.0.0.1
