--- a/example_conf/master.conf
+++ b/example_conf/master.conf
@@ -10,6 +10,7 @@ controller_timeout        = 20
 lock_shared_queue_timeout = 10
 controller_wait_duration  = 10
 task_resend_timeout       = 7200
+version                   = 0.1.1
 
 [comm]
 target          = *
