Added AlertIOTask for sending info mail on degradated OST performance.

--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -20,5 +20,6 @@ lfs_bin         = /usr/bin/lfs
 lfs_target       = nyx
 
 [test]
-measure_interval          = 900
+measure_interval = 900
+task_name        = EmptyTask
 
