Added example host specific settings to database_proxy example config file.

--- a/Configuration/database_proxy.conf
+++ b/Configuration/database_proxy.conf
@@ -7,10 +7,10 @@ poll_timeout    = 10
 pid_file        = /home/gia/tmp/lmon_dbproxy.pid
 
 [db]
-host =
-user =
-passwd =
-database =
+host = fqdn
+user = fqdn
+passwd = fqdn
+database = fqdn
 table = OST_PERF_HISTORY_TESTING_HEBE
 store_timeout = 2000
 store_max_count = 1000
