Added OST Filter List.

--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -17,10 +17,10 @@ filename        =
 [lustre]
 lctl_bin        = /usr/sbin/lctl
 lfs_bin         = /usr/bin/lfs
-lfs_target       = nyx
+lfs_target      = nyx
 
 [test]
 measure_interval = 900
 task_def_file    = ../config/tasks.xml
 task_name        = EmptyTask
-
+ost_filter_list  =
