Renamed filter to select OST list in Master/OSTListProcessor.

--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -23,4 +23,4 @@ lfs_target      = nyx
 measure_interval = 900
 task_def_file    = ../config/tasks.xml
 task_name        = EmptyTask
-ost_filter_list  =
+ost_select_list  =
