--- a/Configuration/controller.conf
+++ b/Configuration/controller.conf
@@ -1,5 +1,5 @@
 [control]
-pid_file                    = /home/gia/tmp/lmon_controller.pid
+pid_file                    = /path/controller.pid
 
 [comm]
 target                      = 127.0.0.1
@@ -8,7 +8,7 @@ poll_timeout                = 10
 request_retry_wait_duration = 10
 
 [log]
-filename                    =
+filename                    = /path/controller.log
 
 [processing]
 worker_count                = 8
