Updated config file for db_proxy and master with non-specific settings.

--- a/Configuration/database_proxy.conf
+++ b/Configuration/database_proxy.conf
@@ -4,14 +4,14 @@ port            = 5777
 poll_timeout    = 10
 
 [control]
-pid_file        = /home/gia/tmp/lmon_dbproxy.pid
+pid_file        = /path/dbproxy.pid
 
 [db]
 host = fqdn
 user = fqdn
 passwd = fqdn
 database = fqdn
-table = OST_PERF_HISTORY_TESTING_HEBE
+table = TABLE_NAME
 store_timeout = 2000
 store_max_count = 1000
 
