--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -1,5 +1,5 @@
 [control]
-pid_file                  = /home/gia/tmp/lmon_master.pid
+pid_file                  = /path/master.pid
 ost_reg_ex                = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex                 = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 controller_timeout        = 20
@@ -21,6 +21,6 @@ lfs_target      = nyx
 
 [test]
 measure_interval = 900
-task_def_file    = ../config/tasks.xml
+task_def_file    = /path/tasks.xml
 task_name        = EmptyTask
 ost_select_list  =
