--- a/Configuration/database_proxy.conf
+++ b/Configuration/database_proxy.conf
@@ -1,19 +1,19 @@
+[control]
+pid_file        = /var/run/lfsm/database_proxy.pid
+
 [comm]
 target          = *
 port            = 5777
 poll_timeout    = 10
 
-[control]
-pid_file        = /path/dbproxy.pid
-
 [db]
-host = fqdn
-user = fqdn
-passwd = fqdn
-database = fqdn
-table = TABLE_NAME
-store_timeout = 2000
+host            = fqdn
+user            = fqdn
+passwd          = fqdn
+database        = fqdn
+table           = TABLE_NAME
+store_timeout   = 2000
 store_max_count = 1000
 
 [log]
-filename        =
+filename        = /var/log/lfsm/database_proxy.log
