--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -1,5 +1,5 @@
 [control]
-pid_file                  = /path/master.pid
+pid_file                  = /var/run/lfsm/master.pid
 ost_reg_ex                = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex                 = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 controller_timeout        = 20
@@ -12,7 +12,7 @@ port            = 5678
 poll_timeout    = 10
 
 [log]
-filename        =
+filename        = /var/log/lfsm/master.log
 
 [lustre]
 lctl_bin        = /usr/sbin/lctl
@@ -21,6 +21,6 @@ lfs_target      = nyx
 
 [test]
 measure_interval = 900
-task_def_file    = /path/tasks.xml
+task_def_file    = /etc/lfsm/tasks.xml
 task_name        = EmptyTask
 ost_select_list  =
