--- a/Configuration/master.local.conf
+++ b/Configuration/master.local.conf
@@ -1,4 +1,5 @@
 [control]
+version                   = 1.4
 pid_file                  = ./LocalRuntime/master.pid
 ost_reg_ex                = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex                 = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
