--- a/Configuration/database-proxy.local.conf
+++ b/Configuration/database-proxy.local.conf
@@ -10,7 +10,7 @@ poll_timeout    = 10
 [db]
 host            = fqdn
 user            = fqdn
-passwd          = fqdn
+password        = fqdn
 database        = fqdn
 table           = TABLE_NAME
 store_timeout   = 300
