changed config param

--- a/Configuration/master.local.conf
+++ b/Configuration/master.local.conf
@@ -17,10 +17,10 @@ filename        = ./LocalRuntime/master.log
 
 [lustre]
 lctl_bin        = /usr/sbin/lctl
-lfs_target      = nyx
+lfs_target      = fs-name
 
 [test]
-measure_interval = 900
+measure_interval = 60
 task_def_file    = ./Configuration/tasks.xml
 task_name        = EmptyTask
 ost_select_list  =
