add task_generator section for master config file

--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -1,8 +1,6 @@
 [control]
 version                   = 1.4
 pid_file                  = /var/run/lfsm/master.pid
-ost_reg_ex                = ^OST[0-9a-fA-F]{4}$
-ip_reg_ex                 = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 controller_timeout        = 20
 controller_wait_duration  = 10
 task_resend_timeout       = 28800
@@ -19,8 +17,12 @@ filename        = /var/log/lfsm/master.log
 lctl_bin        = /usr/sbin/lctl
 lfs_target      = nyx
 
-[test]
-measure_interval = 900
+[task]
 task_def_file    = /etc/lfsm/tasks.xml
 task_name        = EmptyTask
+
+[task_generator]
+measure_interval = 900
+ost_reg_ex       = ^OST[0-9a-fA-F]{4}$
+ip_reg_ex        = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 ost_select_list  =
