--- a/Configuration/master.local.conf
+++ b/Configuration/master.local.conf
@@ -1,8 +1,6 @@
 [control]
 version                   = 1.4
 pid_file                  = ./LocalRuntime/master.pid
-ost_reg_ex                = ^OST[0-9a-fA-F]{4}$
-ip_reg_ex                 = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 controller_timeout        = 20
 controller_wait_duration  = 10
 task_resend_timeout       = 28800
@@ -19,8 +17,12 @@ filename        = ./LocalRuntime/master.log
 lctl_bin        = /usr/sbin/lctl
 lfs_target      = fs-name
 
-[test]
-measure_interval = 60
+[task]
 task_def_file    = ./Configuration/tasks.xml
 task_name        = EmptyTask
+
+[task_generator]
+measure_interval = 60
+ost_reg_ex       = ^OST[0-9a-fA-F]{4}$
+ip_reg_ex        = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 ost_select_list  =
