remove local mode config files

--- a/Configuration/database-proxy.conf
+++ b/Configuration/database-proxy.conf
@@ -1,6 +1,6 @@
 [control]
-version         = 1.4
-pid_file        = /var/run/lfsm/database-proxy.pid
+version         = 1.4.1
+pid_file        = ./Runtime/database-proxy.pid
 
 [comm]
 target          = *
@@ -17,4 +17,4 @@ store_timeout   = 300
 store_max_count = 1000
 
 [log]
-filename        = /var/log/lfsm/database-proxy.log
+filename        = ./Runtime/database-proxy.log
