--- a/Configuration/controller.conf
+++ b/Configuration/controller.conf
@@ -1,15 +1,15 @@
 [control]
-version                     = 1.4
-pid_file                    = /var/run/lfsm/controller.pid
+version                     = 1.4.1
+pid_file                    = ./Runtime/controller.pid
 
 [comm]
 target                      = 127.0.0.1
 port                        = 5678
-poll_timeout                = 10
-request_retry_wait_duration = 10
+poll_timeout                = 5
+request_retry_wait_duration = 5
 
 [log]
-filename                    = /var/log/lfsm/controller.log
+filename                    = ./Runtime/controller.log
 
 [processing]
-worker_count                = 8
+worker_count                = 4
