--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -1,6 +1,6 @@
 [control]
-version                   = 1.4
-pid_file                  = /var/run/lfsm/master.pid
+version                   = 1.4.1
+pid_file                  = ./Runtime/master.pid
 controller_timeout        = 20
 controller_wait_duration  = 10
 task_resend_timeout       = 28800
@@ -11,18 +11,18 @@ port            = 5678
 poll_timeout    = 10
 
 [log]
-filename        = /var/log/lfsm/master.log
+filename        = ./Runtime/master.log
 
 [lustre]
 lctl_bin        = /usr/sbin/lctl
-lfs_target      = nyx
+lfs_target      = fs-name
 
 [task]
-task_def_file    = /etc/lfsm/tasks.xml
+task_def_file    = ./Configuration/tasks.xml
 task_name        = EmptyTask
 
 [task_generator]
-measure_interval = 900
+measure_interval = 60
 ost_reg_ex       = ^OST[0-9a-fA-F]{4}$
 ip_reg_ex        = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
 ost_select_list  =
