--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -13,16 +13,12 @@ poll_timeout    = 10
 [log]
 filename        = ./Runtime/master.log
 
-[lustre]
-lctl_bin        = /usr/sbin/lctl
-lfs_target      = fs-name
-
 [task]
 task_def_file    = ./Configuration/tasks.xml
 task_name        = EmptyTask
 
 [task_generator]
 measure_interval = 60
-ost_reg_ex       = ^OST[0-9a-fA-F]{4}$
-ip_reg_ex        = ^\d{1-3}.\d{1-3}.\d{1-3}.\d{1-3}$
+lfs_bin          = /usr/bin/lfs
+lfs_target       = fs-name
 ost_select_list  =
