--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -13,12 +13,7 @@ poll_timeout    = 10
 [log]
 filename        = ./Runtime/master.log
 
-[task]
-task_def_file    = ./Configuration/tasks.xml
-task_name        = EmptyTask
-
 [task_generator]
-measure_interval = 90
-lfs_bin          = /usr/bin/lfs
-lfs_target       = fs-name
-ost_select_list  =
+module = task.generator.lustre_xml_task_generator
+class = LustreXmlTaskGenerator
+config_file = ./Configuration/lustre_xml_task_generator.conf
