--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -14,6 +14,6 @@ poll_timeout    = 10
 filename        = ./Runtime/master.log
 
 [task_generator]
-module = task.generator.lustre_xml_task_generator
-class = LustreXmlTaskGenerator
-config_file = ./Configuration/lustre_xml_task_generator.conf
+module = task.generator.lustre_monitoring_task_generator
+class = LustreMonitoringTaskGenerator
+config_file = ./Configuration/lustre_monitoring_task_generator.conf
