--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -2,7 +2,7 @@
 version                   = 1.4.1
 pid_file                  = ./Runtime/master.pid
 controller_timeout        = 20
-controller_wait_duration  = 10
+controller_wait_duration  = 1
 task_resend_timeout       = 28800
 
 [comm]
@@ -14,6 +14,10 @@ poll_timeout    = 10
 filename        = ./Runtime/master.log
 
 [task_generator]
-module = task.generator.lustre_monitoring_task_generator
-class = LustreMonitoringTaskGenerator
-config_file = ./Configuration/lustre_monitoring_task_generator.conf
+module = task.generator.lustre_ost_file_migration_task_generator
+class = LustreOstFileMigrationTaskGenerator
+config_file = ./Configuration/lustre_ost_file_migration_task_generator.conf
+
+#module = task.generator.lustre_monitoring_task_generator
+#class = LustreMonitoringTaskGenerator
+#config_file = ./Configuration/lustre_monitoring_task_generator.conf
