--- a/Configuration/lustre_ost_file_migration_task_generator.conf
+++ b/Configuration/lustre_ost_file_migration_task_generator.conf
@@ -3,4 +3,4 @@ target = fs-name
 
 [lustre.migration]
 ost_targets = 1,2,3
-input_file = /home/gia/workspace/ost_migration_file_lists/input_file.txt
+input_file = ~/tmp/input_file.txt
