add Lustre specific parameter to lustre_ost_file_migration_task_generator.conf

--- a/Configuration/lustre_ost_file_migration_task_generator.conf
+++ b/Configuration/lustre_ost_file_migration_task_generator.conf
@@ -1,6 +1,7 @@
 [lustre]
-target = fs-name
+fs_path=/lustre
 
 [lustre.migration]
 ost_targets = 1,2,3
 input_dir = ./Input
+ost_fill_threshold = 50
