parametrize thresholds for lustre_ost_file_migration_task_generator

--- a/Configuration/lustre_ost_file_migration_task_generator.conf
+++ b/Configuration/lustre_ost_file_migration_task_generator.conf
@@ -1,8 +1,13 @@
 [control]
 local_mode = on
 
+[control.threshold]
+update_fill_level = 900
+reload_files = 900
+print_caches = 900
+
 [lustre]
-fs_path=/lustre
+fs_path = /lustre
 
 [lustre.migration]
 ost_targets = 1,2,3
