read max_num_request_retries from controller config file

--- a/Configuration/controller.conf
+++ b/Configuration/controller.conf
@@ -1,6 +1,7 @@
 [control]
 pid_file                    = ./Runtime/controller.pid
 request_retry_wait_duration = 5
+max_num_request_retries     = 3
 
 [comm]
 target                      = 127.0.0.1
