removed unused critical section in lustre_ost_file_migration_task_generator

--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -13,10 +13,20 @@ poll_timeout    = 1
 filename        = ./Runtime/master.log
 
 [task_generator]
-module = task.generator.lustre_ost_file_migration_task_generator
-class = LustreOstFileMigrationTaskGenerator
-config_file = ./Configuration/lustre_ost_file_migration_task_generator.conf
+module = task.generator.benchmark_task_generator
+class = BenchmarkTaskGenerator
+config_file = ./Configuration/benchmark_task_generator.conf
 
-#module = task.generator.lustre_monitoring_task_generator
-#class = LustreMonitoringTaskGenerator
-#config_file = ./Configuration/lustre_monitoring_task_generator.conf
+# Supported Task Generator:
+#
+# module = task.generator.benchmark_task_generator
+# class = BenchmarkTaskGenerator
+# config_file = ./Configuration/benchmark_task_generator.conf
+#
+# module = task.generator.lustre_ost_file_migration_task_generator
+# class = LustreOstFileMigrationTaskGenerator
+# config_file = ./Configuration/lustre_ost_file_migration_task_generator.conf
+#
+# module = task.generator.lustre_monitoring_task_generator
+# class = LustreMonitoringTaskGenerator
+# config_file = ./Configuration/lustre_monitoring_task_generator.conf
