add num_ost to lustre_ost_file_migration_task_generator.conf

--- a/Configuration/lustre_ost_file_migration_task_generator.conf
+++ b/Configuration/lustre_ost_file_migration_task_generator.conf
@@ -1,15 +1,18 @@
 [control]
 local_mode = on
 
+[control.local_mode]
+num_osts = 10
+
 [control.threshold]
 update_fill_level = 900
 reload_files = 900
 print_caches = 900
 
-[lustre]
-fs_path = /lustre
-
-[lustre.migration]
-input_dir = ./Input
+[migration]
+input_dir = Runtime/input
 ost_fill_threshold = 50
 ost_targets = 1,2,3
+
+[lustre]
+fs_path = /lustre
