--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
-.idea
 *.log
 *.pyc
 *.pid
+
 *.vscode
+.idea
+
+Runtime/*
 
 Pyinstaller/pybuild/*
 
 Debian/*.buildinfo
 Debian/*.changes
 Debian/*.deb
-
 Debian/*/debian/*debhelper*
 Debian/*/debian/*substvars
 Debian/*/debian/files
