Renamed input_dir in lustre_ost_migration_task_generator.conf

--- a/Configuration/lustre_ost_migration_task_generator.conf
+++ b/Configuration/lustre_ost_migration_task_generator.conf
@@ -10,7 +10,7 @@ reload_files = 900
 print_caches = 900
 
 [migration]
-input_dir = Runtime/input
+input_dir = Input
 ost_fill_threshold = 50
 ost_targets = 1,2,3
 
