Use clush RangeSet for specifying ranges in TaskGenerator

--- a/Configuration/lustre_ost_migration_task_generator.conf
+++ b/Configuration/lustre_ost_migration_task_generator.conf
@@ -12,7 +12,7 @@ print_caches = 900
 [migration]
 input_dir = Input
 ost_fill_threshold = 50
-ost_targets = 1,2,3
+ost_targets = 1-3,5,8
 
 [lustre]
 fs_path = /lustre
