Add separated fill level support for source and target OSTs in LustreOstMigrationTaskGenerator.

--- a/Configuration/lustre_ost_migration_task_generator.conf
+++ b/Configuration/lustre_ost_migration_task_generator.conf
@@ -5,13 +5,14 @@ local_mode = on
 num_osts = 10
 
 [control.threshold]
-update_fill_level = 900
-reload_files = 900
-print_caches = 900
+reload_files = 30
+print_caches = 30
+update_fill_level = 30
 
 [migration]
 input_dir = Input
-ost_fill_threshold = 50
+ost_fill_level_threshold_source = 50
+ost_fill_level_threshold_target = 50
 ost_targets = 1-3,5,8
 
 [lustre]
