Read tasks for OstMigration from XML file.

--- a/Configuration/lustre_ost_migration_task_generator.conf
+++ b/Configuration/lustre_ost_migration_task_generator.conf
@@ -9,6 +9,11 @@ reload_files = 30
 print_caches = 30
 update_fill_level = 30
 
+[task]
+task_file = ./Configuration/lustre_ost_migration_tasks.xml
+task_name = EmptyTask
+# task_name = OstMigrateTask
+
 [migration]
 input_dir = Input
 ost_fill_level_threshold_source = 50
