Implement Prometheus pushgateway client for LustreFileCreationCheck

--- a/Configuration/lustre_ost_monitoring_task_generator.conf
+++ b/Configuration/lustre_ost_monitoring_task_generator.conf
@@ -1,10 +1,12 @@
 [control]
 local_mode = ON
-measure_interval = 90
+measure_interval = 60
+# TODO
+#####ost_select_list =
 
 [task]
 task_file = ./Configuration/lustre_ost_monitoring_tasks.xml
-task_name = EmptyTask
+task_name = LustreFileCreationCheckTask
 
 [lustre]
 lfs_bin = /usr/bin/lfs
