--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -10,17 +10,18 @@ port            = 5678
 poll_timeout    = 1
 
 [log]
-filename        = ./Runtime/master.log
+##filename        = ./Runtime/master.log
+filename        = 
 
 [task_generator]
-module = task.generator.benchmark_task_generator
-class = BenchmarkTaskGenerator
-config_file = ./Configuration/benchmark_task_generator.conf
+#module = task.generator.benchmark_task_generator
+#class = BenchmarkTaskGenerator
+#config_file = ./Configuration/benchmark_task_generator.conf
 #
 # module = task.generator.lustre_ost_migration_task_generator
 # class = LustreOstMigrationTaskGenerator
 # config_file = ./Configuration/lustre_ost_migration_task_generator.conf
 #
-# module = task.generator.lustre_ost_monitoring_task_generator
-# class = LustreOstMonitoringTaskGenerator
-# config_file = ./Configuration/lustre_ost_monitoring_task_generator.conf
+module = task.generator.lustre_ost_monitoring_task_generator
+class = LustreOstMonitoringTaskGenerator
+config_file = ./Configuration/lustre_ost_monitoring_task_generator.conf
