Add InterruptableSleep interface and implement SecondsSleep class

--- a/Configuration/lustre_ost_monitoring_task_generator.conf
+++ b/Configuration/lustre_ost_monitoring_task_generator.conf
@@ -4,7 +4,7 @@ measure_interval = 60
 
 [task]
 task_file = ./Configuration/lustre_ost_monitoring_tasks.xml
-task_name = LustreFileCreationCheckTask
+task_name = EmptyTask
 
 [lustre]
 lfs_bin         = /usr/bin/lfs
