--- a/Configuration/master.conf
+++ b/Configuration/master.conf
@@ -10,8 +10,7 @@ port            = 5678
 poll_timeout    = 1
 
 [log]
-##filename        = ./Runtime/master.log
-filename        = 
+filename        = ./Runtime/master.log
 
 [task_generator]
 #module = task.generator.benchmark_task_generator
