--- a/Configuration/pushgateway-client.conf
+++ b/Configuration/pushgateway-client.conf
@@ -1,5 +1,5 @@
 [control]
-pid_file      = ./Runtime/pushgateway.pid
+pid_file      = ./Runtime/pushgateway-client.pid
 push_interval = 60
 push_url      = http://localhost:9091/metrics/job/cyclone
 
@@ -9,4 +9,4 @@ port         = 5888
 poll_timeout = 2
 
 [log]
-filename     = ./Runtime/pushgateway.log
+filename     = ./Runtime/pushgateway-client.log
