Add clearing of pushgateway metrics

--- a/Configuration/pushgateway-client.conf
+++ b/Configuration/pushgateway-client.conf
@@ -1,7 +1,11 @@
 [control]
 pid_file      = ./Runtime/pushgateway-client.pid
-push_interval = 60
-push_url      = http://localhost:9091/metrics/job/cyclone
+
+[push]
+interval       = 60
+url            = http://localhost:9091/metrics/job/cyclone
+clear_interval = 86400
+timeout        = 15
 
 [comm]
 target       = *
