--- a/Configuration/lustre_ost_migration_task_generator.conf
+++ b/Configuration/lustre_ost_migration_task_generator.conf
@@ -12,7 +12,7 @@ update_fill_level = 30
 [task]
 task_file = ./Configuration/lustre_ost_migration_tasks.xml
 task_name = EmptyTask
-# task_name = OstMigrateTask
+# task_name = LustreOstMigrateTask
 
 [migration]
 input_dir = Input
