--- a/Configuration/controller.conf
+++ b/Configuration/controller.conf
@@ -1,5 +1,5 @@
 [control]
-pid_file                    = ./Runtime/controller.pid
+pid_file                    = Runtime/controller.pid
 request_retry_wait_duration = 5
 max_num_request_retries     = 3
 
@@ -9,7 +9,7 @@ port                        = 5678
 poll_timeout                = 2
 
 [log]
-filename                    = ./Runtime/controller.log
+filename                    = Runtime/controller.log
 
 [processing]
-worker_count                = 4
+worker_count                = 8
